--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -14,7 +14,7 @@
   </div>
  
     <div class="footer">
-        <p>Copyright 2023 - #Oday Darwish</p>
+        <p>Copyright 2023 - #Belghith-Adem</p>
     </div>
 
 
