--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -135,6 +135,7 @@
           <button
             class="btn btn-light"
             data-bs-toggle="modal"
+            (click)="onDeleteConversation()"
             data-bs-target="#deleteChatModal"
           >
             <i class="bi bi-trash-fill text-danger"></i> Delete Chat
