--- a/src/app/pages/sidebar-right/sidebar-right.component.html
+++ b/src/app/pages/sidebar-right/sidebar-right.component.html
@@ -1,59 +1,34 @@
 <div class="right-sidebar">
     <div class="sidebar-tittle">
-        <h4>Events</h4>
+        <h4 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Users</h4>
         <a href="#">See All</a>
     </div>
-    <div class="event">
-        <div class="left-event">
-            <h3>28</h3>
-            <span>March</span>
-        </div>
-        <div class="right-event">
-            <h4>Social Media</h4>
-            <p><i class="fas fa-map-marker-alt"></i> Willson Tech Park</p>
-            <a href="#">More Info</a>
-        </div>
-    </div>
-    <div class="event">
-        <div class="left-event">
-            <h3>23</h3>
-            <span>June</span>
-        </div>
-        <div class="right-event">
-            <h4>Mobile Marketing</h4>
-            <p><i class="fas fa-map-marker-alt"></i> Oday Tech Park</p>
-            <a href="#">More Info</a>
-        </div>
-    </div>
-    
-    <div class="sidebar-tittle">
-        <h4>Advertidement</h4>
-        <a href="#">Close</a>
-    </div>
-    
-    <div class="sidebar-tittle">
-        <h4>Conversation</h4>
-        <a href="#">Hide Chat</a>
-    </div>
 
-    <div class="online-list">
-        <div class="online">
-            <img src="https://picsum.photos/1691" alt="">
-        </div>
-        <p>Alison Mina</p>
-    </div>
-    <div class="online-list">
-        <div class="online">
-            <img src="https://picsum.photos/1641" alt="">
-        </div>
-        <p>Oday Darwish</p>
-    </div>
-    <div class="online-list">
-        <div class="online">
-            <img src="https://picsum.photos/1614" alt="">
-        </div>
-        <p>Samana Rose</p>
-    </div>
+
+   <div class="flow-root">
+    <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
+        <li class="pt-3 pb-0 sm:pt-4" *ngFor="let user of users">
+            <div class="flex items-center space-x-4">
+                <div class="flex-shrink-0">
+                    <img class="w-8 h-8 rounded-full" src="https://flowbite.com/docs/images/people/profile-picture-5.jpg" alt="Thomas image">
+                </div>
+                <div class="flex-1 min-w-0">
+                    <p class="text-sm font-medium text-gray-900 truncate dark:text-white">
+                        {{ user.firstName }} {{ user.lastName }}
+                    </p>
+                  
+                </div>
+<!-- sidebar-right.component.html -->
+<button class="bg-blue-500 hover:bg-blue-700 focus:ring-3 focus:outline-none focus:ring-blue-300 rounded-lg text-sm px-4 py-2 ml-2 text-white dark:bg-blue-500 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        (click)="toggleFollow(user.userId)">
+    {{ followedUserIds.has(user.userId) ? 'Unfollow' : 'Follow' }}
+</button>
+
+            </div>
+        </li>
+    </ul>
+</div>
+
 
 
 </div>
